--- a/_config.yml
+++ b/_config.yml
@@ -5,13 +5,13 @@ page_title                                :                                     
 ios_app_id                                : 1234793120                                # Required. Enter iOS app ID to automatically populate name, price and icons (e.g. 718043190).
 ios_app_country                           : us                                        # Required outside USA. Enter 2 letter country code as in https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2
 
-appstore_link                             :                                           # Automatically populates if not set and if iOS app ID is set. Otherwise enter manually.
+appstore_link                             :  https://apps.apple.com/us/app/evdy-step-counter/id1642210918                                         # Automatically populates if not set and if iOS app ID is set. Otherwise enter manually.
 playstore_link                            :                                           # Enter Google Play Store URL.
 presskit_download_link                    :                                      # Enter a link to downloadable file or (e.g. public Dropbox link to a .zip file). 
                                                                                       # Or upload your press kit file to assets and set path accordingly (e.g. "assets/your_press_kit.zip").
 
 app_icon                                  : assets/appIcon.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
-app_name                                  : EVDY counter                                       # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
+app_name                                  : EVDY Steps                                       # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_price                                 :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_description                           : Step counter app
 
@@ -40,7 +40,7 @@ features                                  :
     description                           : Set and achive your activity goals
     fontawesome_icon_name                 : magic
   
-  - title                                 : Helps to analazy walked distance
+  - title                                 : Helps to analaze walked distance
     description                           : Helps you to visually see difference between days
     fontawesome_icon_name                 : star
 
